syntax = "proto3";
package ProtoMessage;
option java_package = "org.jzy.game.proto";
option java_multiple_files = true;
option java_outer_classname = "CommonProto";
import "MessageId.proto";
option go_package="message";

//http 调用
message HttpRequest{
  string path                 = 1; //路径
  int64 id                    = 2; //唯一标识id
  string jsonParam            = 3; //json字符串参数
}
//http 调用
message HttpResponse{
  int32 code                  = 2; //结果码 200成功
  string result               = 3; //返回结果字符串
}



//rpc
service CommonRpcService{
  //http请求
  rpc httpPost(HttpRequest) returns (HttpResponse);

}
